# WFIT

./: .gitignore  CHANGELOG.md  CLAUDE.md  DATA_SOURCING_MASTER_PLAN.md  GAMESTATE_WORLDSTATE.md  GAME_INVENTORY_IMPORT.md  HANDOFF.md  INVENTORY_REDESIGN.md  LICENSE  README.md  WFM_ACCOUNT_SIGNIN.md  biome.json  index.html  overlay.html  package-lock.json  package.json  relic-overlay.html  tsconfig.json  vite.config.ts
.claude/: settings.json
.claude/plans/: arcanes-liquidity-vosfor-fix.md  aya-regal-aya-vendors.md  dashboard-rotation-style-redesign.md  game-inventory-import.md  home-dashboard-widget-overhaul.md  i-just-added-the-noble-widget.md  pricing-rework.md  roadmap-features-and-improvements.md  search-and-wiki.md
.githooks/: pre-commit
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
CLAUDE_ECONOMIC_RESEARCH/: ECONOMIC_DATA_PRESENTATION.md  primely-valuation-design.md
design/: Primely Dashboard.html  README.md  primely.jsx
design_handoff_profile_page/: README.md  account-explorations.html  account-profile.html  design-canvas.jsx
design_handoff_wfit/design_handoff_wfit/: README.md  wireframe.jsx
design_handoff_wfit_update1/: README.md
docs/: ARCANE_DISSOLUTION.md  ARCHITECTURE.md  DATA_SOURCING_MASTER_PLAN.md  DESKTOP_REWRITE_PRD.md  FEATURE_PLAYBOOK.md  GAMESTATE_WORLDSTATE.md  GAME_INVENTORY_IMPORT.md  HANDOFF.md  HOME_WIDGETS.md  PERF_OPTIMIZATION.md  ROTATION_PAGE_DESIGN.md  WFM_ACCOUNT_SIGNIN.md  wfit-relic-tab-prompt.md
docs/archive/: DESKTOP_REWRITE_PRD.md
docs/design_handoff_profile_page/: README.md  account-B.html  account-koala.html
public/fonts/: README.md
reference/: CLAUDE.old-project.md  HANDOFF.old.md  current-scope.md  original-webapp-PRD.md  research-findings.md
reference/design_handoff_wfit_update1/: WFIT Wireframe.html  wireframe.jsx
reference/domain-logic/: database.types.ts  derive.ts  partname.ts  parts.ts  types.ts
reference/market-proxy/: index.ts
reference/migrations/: 0001_init.sql  0002_drop_set_slug_fk.sql  0003_add_catalog_category.sql
reference/prior-tauri-attempt/: Cargo.toml  tauri.conf.json
reference/prior-tauri-attempt/migrations/: 0001_init.sql
reference/prior-tauri-attempt/src/: commands.rs  error.rs  lib.rs  main.rs  market.rs  types.rs
reference/prior-tauri-attempt/src/db/: catalog.rs  inventory.rs  meta.rs  mod.rs  prices.rs  sales.rs
scripts/: install-mac.sh  install.sh  scrape_vendors.py  stress.sh
src/: App.tsx  index.css  main.tsx  theme.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/benches/: valuation.rs
src-tauri/capabilities/: default.json  overlay.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_init.sql  0002_ohlc.sql  0003_game_import.sql  0004_ranks.sql  0005_orders.sql  0006_buy_orders.sql  0007_mod_rarity.sql  0008_vault_status.sql  0009_perf_indexes.sql  0010_order_fetch_meta.sql  0011_owned_relics.sql  0012_relic_data.sql  0013_account.sql  0014_rivens.sql  0015_riven_search_thresholds.sql  0016_app_notifications.sql  0017_vendor_checkoff.sql  0018_relic_prefs.sql  0019_nightwave_completions.sql  0020_coda_rotation.sql
src-tauri/resources/ocr/: README.md
src-tauri/src/: commands.rs  error.rs  hotkeys.rs  lib.rs  main.rs  market.rs  notify.rs  overlay.rs  types.rs  updater.rs  wfm_account.rs  wfm_socket.rs  worldstate.rs
src-tauri/src/db/: account.rs  arcanes.rs  backup.rs  buylist.rs  catalog.rs  coda.rs  gamescan.rs  inventory.rs  meta.rs  mod.rs  nightwave_acts.rs  notifications.rs  prices.rs  recommend.rs  relic_data.rs  relics.rs  rivens.rs  sales.rs  sets.rs  settings.rs  simulate.rs  trends.rs  vault.rs  vendor.rs  vendor_checkoff.rs  wanted.rs  watchlist.rs  wfm.rs
src-tauri/src/db/data/: item_manifest.tsv
src-tauri/src/devtools/: dashboard.html  faults.rs  metrics.rs  mod.rs  server.rs
src-tauri/src/domain/: arcane.rs  classify.rs  coda.rs  mastery.rs  mod.rs  mod_rarity.rs  nightwave.rs  partname.rs  relic.rs  reward_match.rs  vendors.rs
src-tauri/src/domain/data/: arcane_dissolution.tsv  mod_rarity.tsv  nightwave_offerings.tsv  relic_drops.tsv  relic_id.tsv  relic_vault.tsv  vault.tsv
src-tauri/src/domain/data/vendors/: arbiters_of_hexis.tsv  cephalon_suda.tsv  entrati.tsv  necraloid.tsv  new_loka.tsv  ostron.tsv  perrin_sequence.tsv  quills.tsv  red_veil.tsv  solaris_united.tsv  steel_meridian.tsv  vox_solaris.tsv
src-tauri/src/gamescan/: account.rs  api.rs  consent.rs  fingerprint.rs  map.rs  memory.rs  memory_linux.rs  memory_windows.rs  mod.rs  process.rs  process_windows.rs  scan.rs  season.rs
src-tauri/src/gamescan/testdata/: inventory_sample.json
src-tauri/src/relic_ocr/: capture.rs  layout.rs  log_watch.rs  matching.rs  mod.rs  ocr.rs  preprocess.rs
src-tauri/src/relic_ocr/testdata/: README.md
src-tauri/src/rivens/: grade.rs  mod.rs  price.rs  watch.rs
src-tauri/src/rivens/data/: riven_base_stats.tsv
src-tauri/src/worldstate/: arbys.rs  cycles.rs  extra.rs  mod.rs  raw.rs
src-tauri/src/worldstate/data/: arby_tiers.tsv  sol_nodes.tsv
src/components/: AddItems.tsx  Countdown.tsx  Drawer.tsx  Dropdown.tsx  ErrorBoundary.tsx  GameScanPanel.tsx  Icon.tsx  ItemTags.tsx  KeybindCapture.tsx  ListingForm.tsx  LiveBadge.tsx  NotificationCenter.tsx  RecoveryScreen.tsx  RelicDrawer.tsx  ResizeGrips.tsx  RivenSavedSidebar.tsx  SearchResults.tsx  SearchSuggest.tsx  SetDrawer.tsx  Sidebar.tsx  SyncNow.tsx  TitleBar.tsx  Toasts.tsx  TopbarSearch.tsx  charts.tsx  ui.tsx
src/hooks/: queries.ts  useDrawerResize.ts  useEscape.ts  useTable.ts
src/lib/: api.ts  clipboard.ts  format.ts  persist.ts  prefs.ts  searchContext.tsx  searchQuery.ts  searchSchemas.ts  smoothScroll.ts  toast.ts  types.ts  wiki.ts
src/overlay/: Overlay.tsx  main.tsx  overlay.css
src/relic_overlay/: RelicOverlay.tsx  main.tsx  relic-overlay.css
src/routes/: Account.tsx  Arcanes.tsx  BuyList.tsx  Dashboard.tsx  Ducats.tsx  Inventory.tsx  Listings.tsx  Market.tsx  Relics.tsx  RivenSearch.tsx  Rotation.tsx  Sets.tsx  Settings.tsx  SoldHistory.tsx  Trends.tsx  Vendors.tsx  Watchlist.tsx
(+8 files in other folders)
