[package]
name = "wfit"
version = "1.0.0"
description = "Warframe Item Tracker — local Tauri desktop tracker for warframe.market"
edition = "2021"
license-file = "../LICENSE"
rust-version = "1.77"

[lib]
name = "wfit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "time", "rt-multi-thread", "macros"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
# Presence socket: warframe.market sets online/ingame status over a held WebSocket
# (no REST endpoint). rustls to match reqwest's TLS stack (no native-tls).
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
futures-util = { version = "0.3", features = ["sink"] }
rusqlite = { version = "0.32", features = ["bundled"] }
rusqlite_migration = "1.3"
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2.3" # daily-rolling file logs in app_data_dir/logs
once_cell = "1"
base64 = "0.22" # decode the session JWT's `exp` claim (expiry warning)
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.25"

# Dev-only: the local stress/observability dashboard HTTP server (feature
# `dev-dashboard`, off by default). axum is hyper/tokio-based like reqwest, so it
# adds little beyond what's already in the graph — and only when the feature is on.
axum = { version = "0.7", optional = true, default-features = false, features = [
  "json",
  "tokio",
  "http1",
] }

# Windows: game-inventory memory scan (gamescan/memory_windows.rs, process_windows.rs).
# Pure-Rust bindings — no extra SDK needed to `cargo check` the target from other hosts.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_System_Threading",
  "Win32_System_Memory",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_System_Diagnostics_Debug",
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
# Dev-only local web dashboard (observability + stress + fault injection). Compiles
# the devtools server + axum ONLY when enabled — never in shipped release builds.
# Run with: npm run tauri:dev:dash  (passes --features dev-dashboard to cargo).
dev-dashboard = ["dep:axum", "tokio/net"]
# Exposes a tiny `bench_api` re-export of the crate-private valuation hot paths so
# `benches/` can reach them. Off by default; never enabled in release. Run benches
# with: cargo bench --features bench
bench = []

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "valuation"
harness = false

# Smaller, faster installed binary (scripts/install.sh builds --release).
# panic stays "unwind" — Tauri callbacks tolerate caught panics better.
[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
