[package]
name = "wfit"
version = "1.4.1"
description = "Warframe Item Tracker — local Tauri desktop tracker for warframe.market"
edition = "2021"
license-file = "../LICENSE"
rust-version = "1.77"

[lib]
name = "wfit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "time", "rt-multi-thread", "macros"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
# Presence socket: warframe.market sets online/ingame status over a held WebSocket
# (no REST endpoint). rustls to match reqwest's TLS stack (no native-tls).
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
futures-util = { version = "0.3", features = ["sink"] }
rusqlite = { version = "0.32", features = ["bundled"] }
rusqlite_migration = "1.3"
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2.3" # daily-rolling file logs in app_data_dir/logs
once_cell = "1"
strsim = "0.11" # relic_ocr: OCR-noise-tolerant reward-name matching
base64 = "0.22" # decode the session JWT's `exp` claim (expiry warning)
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.25"

# Dev-only: the local stress/observability dashboard HTTP server (feature
# `dev-dashboard`, off by default). axum is hyper/tokio-based like reqwest, so it
# adds little beyond what's already in the graph — and only when the feature is on.
axum = { version = "0.7", optional = true, default-features = false, features = [
  "json",
  "tokio",
  "http1",
] }
ocrs = { version = "0.12", optional = true }
rten = { version = "0.24", optional = true }
image = { version = "0.25", default-features = false, features = ["png"] }
xcap = { version = "0.9", optional = true }

# Linux: overlay window re-typing (overlay.rs::claim_osd_layer). Same gtk3/gdk3
# already in the tree via tauri/wry — a direct dep only to call gdk::property_change.
[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"
gdk = "0.18"

# Windows: game-inventory memory scan (gamescan/memory_windows.rs, process_windows.rs).
# Pure-Rust bindings — no extra SDK needed to `cargo check` the target from other hosts.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_System_Threading",
  "Win32_System_Memory",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_System_Diagnostics_Debug",
] }

[features]
# Lean by default: public release bundles ship WITHOUT the dev dashboard (an
# unauthenticated loopback server doesn't belong in strangers' installs). Local
# workflows opt back in explicitly — `npm run tauri:dev` and `scripts/install.sh`
# both pass `--features dev-dashboard`.
default = ["custom-protocol", "relic-ocr"]
custom-protocol = ["tauri/custom-protocol"]
# Relic-crack price capture (issue #2): screenshot → OCR → priced overlay. Pure-Rust
# OCR (ocrs/rten, models bundled from resources/ocr) — default ON since it adds no
# native libs; the flag exists so a lean build stays possible and so `cargo test`
# can exercise the always-compiled matching/preprocess layers without the models.
relic-ocr = ["dep:ocrs", "dep:rten", "dep:xcap"]
# Local web dashboard (observability + stress + fault injection): a loopback HTTP
# server + axum. Default-on; the server binds 127.0.0.1:8848 (WFIT_DASH_PORT, 0 to
# disable) and is opened from Settings › Developer › Web dashboard.
dev-dashboard = ["dep:axum", "tokio/net"]
# Exposes a tiny `bench_api` re-export of the crate-private valuation hot paths so
# `benches/` can reach them. Off by default; never enabled in release. Run benches
# with: cargo bench --features bench
bench = []

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
tempfile = "3"

[[bench]]
name = "valuation"
harness = false

# OCR inference (rten) is 20x+ slower without optimizations — a debug-build
# capture takes ~20s instead of <1s, which silently blows the 10-second reward
# window in `npm run tauri:dev`. Optimize just the inference/image crates in
# dev; everything else keeps fast debug compiles.
[profile.dev.package.rten]
opt-level = 3
[profile.dev.package.rten-base]
opt-level = 3
[profile.dev.package.rten-gemm]
opt-level = 3
[profile.dev.package.rten-imageproc]
opt-level = 3
[profile.dev.package.rten-simd]
opt-level = 3
[profile.dev.package.rten-tensor]
opt-level = 3
[profile.dev.package.rten-vecmath]
opt-level = 3
[profile.dev.package.ocrs]
opt-level = 3
[profile.dev.package.image]
opt-level = 3

# Smaller, faster installed binary (scripts/install.sh builds --release).
# panic stays "unwind" — Tauri callbacks tolerate caught panics better.
[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
